<!--
  ~ Copyright (c) 2017 Lizhaotailang
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
    <string name="app_name">Mango</string>

    <!--Common-->
    <string name="empty_content">Oops…nothing here</string>
    <string name="network_error">Network error</string>
    <string name="gif">GIF</string>

    <!--Get started-->
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_mango">WELCOME TO MANGO</string>
    <string name="request_refresh_token_failed">Request refresh token failed</string>

    <!--Main page-->
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="recent">Recent</string>
    <string name="debuts">Debuts</string>
    <string name="shot_title">%1$s - %2$s</string>
    <!--Main page menus-->
    <string name="action_main">action_main</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>
    <string name="log_out">Log out</string>
    <string name="logout_message">Look forward to meet you again.</string>

    <!--Shot detail-->
    <string name="likes_formatted">Likes %1$d</string>
    <string name="comments_formatted">Comments %1$d</string>
    <string name="views_formatted">Views %1$d</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied">Copied</string>
    <string name="share_to">Share to</string>
    <!--Shot detail menus-->
    <string name="action_shot">action_shot</string>
    <string name="action_share">Share</string>
    <string name="action_open_in_browser">Open in browser</string>

    <!--Comments-->
    <string name="add_comment_hint">Add comment</string>
    <string name="add_comment_failed">Add comment failed</string>

    <!--User profile-->
    <string name="followers_formatted">Followers %1$d</string>
    <string name="following_formatted">Following %1$d</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="tab_title_shots">SHOTS %1$d</string>
    <string name="tab_title_likes">LIKES %1$d</string>
    <!--User profile menus-->
    <string name="action_user">action_user</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="clear_cache_desc">Cache size: %1$d MB</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="version_desc">1.0.0</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="authors">Authors</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_desc">https://github.com/TonnyL/Mango/graphs/contributors</string>
    <string name="follow_me_on_github">Follow Me on GitHub</string>
    <string name="follow_me_on_github_desc">https://github.com/TonnyL</string>
    <string name="support">Support</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_desc">https://github.com/TonnyL/Mango</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email">marktonymengyi@gmail.com</string>
    <string name="feedback_email_subject">Mango Feedback</string>
    <string name="feedback_desc">Help me make Mango App better</string>

    <!--Image content descriptions-->
    <string name="avatar_desc">Avatar</string>
    <string name="send_desc">Send</string>
    <string name="shot_desc">Shot</string>
    <string name="like_desc">Like</string>

</resources>
