<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Lizhaotailang
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <Preference
            android:key="clear_cache"
            android:summary="@string/clear_cache_desc"
            android:title="@string/clear_cache" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:summary="@string/version_desc"
            android:title="@string/version" />

        <Preference
            android:key="open_source_licenses"
            android:title="@string/open_source_licenses" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/authors">

        <Preference
            android:key="contributors"
            android:summary="@string/contributors_desc"
            android:title="@string/contributors" />

        <Preference
            android:key="follow_on_github"
            android:summary="@string/follow_me_on_github_desc"
            android:title="@string/follow_me_on_github" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/support">

        <Preference
            android:key="source_code"
            android:summary="@string/source_code_desc"
            android:title="@string/source_code" />

        <Preference
            android:key="feedback"
            android:summary="@string/feedback_desc"
            android:title="@string/feedback" />

    </PreferenceCategory>

</PreferenceScreen>