<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <item
        android:id="@+id/action_main"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/action_main"
        app:showAsAction="ifRoom">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/action_about"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:orderInCategory="1"
                    android:title="@string/action_settings"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_logout"
                    android:icon="@drawable/ic_logout_black_24dp"
                    android:orderInCategory="2"
                    android:title="@string/action_log_out"
                    app:showAsAction="never" />

            </group>

        </menu>

    </item>

</menu>